--- a/nucleo144_tcp_udp_uart.ioc
+++ b/nucleo144_tcp_udp_uart.ioc
@@ -1,4 +1,23 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.ContinuousConvMode=DISABLE
+ADC1.DMAContinuousRequests=DISABLE
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC1.EnableAnalogWatchDog=false
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC1.IPParameters=Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog
+ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=1
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-8\#ChannelRegularConversion=1
+ADC1.Resolution=ADC_RESOLUTION_12B
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.ScanConvMode=DISABLE
+ADC1.master=1
 Dma.Request0=SPI1_TX
 Dma.Request1=SPI1_RX
 Dma.Request2=USART2_RX
@@ -70,66 +89,68 @@ LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.TFTP_MAX_FILENAME_LEN=40
 LWIP.Version=v2.0.0_Cube
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=ETH
-Mcu.IP10=USB_DEVICE
-Mcu.IP11=USB_OTG_FS
-Mcu.IP12=WWDG
-Mcu.IP2=FREERTOS
-Mcu.IP3=LWIP
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=RTC
-Mcu.IP7=SPI1
-Mcu.IP8=SYS
-Mcu.IP9=USART2
-Mcu.IPNb=13
+Mcu.IP0=ADC1
+Mcu.IP1=DMA
+Mcu.IP10=USART2
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
+Mcu.IP13=WWDG
+Mcu.IP2=ETH
+Mcu.IP3=FREERTOS
+Mcu.IP4=LWIP
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=RTC
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=14
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PB0
-Mcu.Pin15=PG0
-Mcu.Pin16=PG1
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PD8
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB0
+Mcu.Pin16=PG0
+Mcu.Pin17=PG1
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PD9
-Mcu.Pin21=PG6
-Mcu.Pin22=PG7
-Mcu.Pin23=PA8
-Mcu.Pin24=PA9
-Mcu.Pin25=PA10
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin20=PD8
+Mcu.Pin21=PD9
+Mcu.Pin22=PG6
+Mcu.Pin23=PG7
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PD5
-Mcu.Pin31=PG11
-Mcu.Pin32=PG13
-Mcu.Pin33=PB5
-Mcu.Pin34=PB7
-Mcu.Pin35=VP_FREERTOS_VS_ENABLE
-Mcu.Pin36=VP_LWIP_VS_Enabled
-Mcu.Pin37=VP_RTC_VS_RTC_Activate
-Mcu.Pin38=VP_RTC_VS_RTC_Calendar
-Mcu.Pin39=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin30=PA14
+Mcu.Pin31=PD5
+Mcu.Pin32=PG11
+Mcu.Pin33=PG13
+Mcu.Pin34=PB5
+Mcu.Pin35=PB7
+Mcu.Pin36=VP_FREERTOS_VS_ENABLE
+Mcu.Pin37=VP_LWIP_VS_Enabled
+Mcu.Pin38=VP_RTC_VS_RTC_Activate
+Mcu.Pin39=VP_RTC_VS_RTC_Calendar
 Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin40=VP_SYS_VS_Systick
-Mcu.Pin41=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin42=VP_WWDG_VS_WWDG
+Mcu.Pin40=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin43=VP_WWDG_VS_WWDG
 Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA5
-Mcu.PinsNb=43
+Mcu.Pin6=PA0/WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=44
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
 MxCube.Version=4.23.0
@@ -153,6 +174,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+PA0/WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA1.GPIO_Mode=GPIO_MODE_AF_PP
 PA1.GPIO_PuPd=GPIO_NOPULL
@@ -355,7 +377,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,5-MX_LWIP_Init-LWIP-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_USART2_UART_Init-USART2-false-HAL,8-MX_WWDG_Init-WWDG-false-HAL,9-MX_RTC_Init-RTC-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,5-MX_LWIP_Init-LWIP-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_USART2_UART_Init-USART2-false-HAL,8-MX_WWDG_Init-WWDG-false-HAL,9-MX_RTC_Init-RTC-false-HAL,10-MX_ADC1_Init-ADC1-false-HAL
 RCC.48MHZClocksFreq_Value=48000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -426,6 +448,8 @@ RCC.VcooutputI2SQ=192000000
 RCC.WatchDogFreq_Value=32000
 RTC.Alarm=RTC_ALARM_A
 RTC.IPParameters=Alarm
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
